# weather_forecast

./: .gitignore  README.md  mypy.ini  pyproject.toml  struktura.txt
tests/ETL/: test_data_loader.py
weather_forecast/ETL/: data_loader.py
weather_forecast/notebooks/: data_load.ipynb
