[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather_forecast"
version = "0.1.0"
description = "Weather forecast"
authors = [
  { name="XY" }
]
dependencies = [
  "meteostat",
  "numpy",
  "pandas",
  "matplotlib",
  "seaborn",
  "geopy",
  "pycountry",
  "black",
  "isort",
  "mypy",
  "pytest-mock"
]

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 110
